# comidinhas-bff

./: .env.example  .gitignore  FRONTEND_GUIDE.md  README.md  insomnia_collection.json  main.py  pyproject.toml  railway.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  error_handlers.py  middleware.py
app/api/routes/: health.py  root.py
app/api/v1/: router.py
app/core/: config.py  errors.py  lifespan.py  logging.py
app/integrations/google_places/: client.py
app/integrations/infobip/: client.py
app/integrations/openai/: client.py
app/integrations/supabase/: __init__.py  auth.py  base.py  client.py  legacy_groups.py  legacy_places.py  no_auth_grupos.py  no_auth_guia_ai.py  no_auth_guias.py  no_auth_lugares.py  no_auth_perfis.py  repositories.py  rpc.py
app/modules/chat/: schemas.py  use_cases.py
app/modules/decisoes/: recomendacoes.py  schemas.py  today_recommendations.py  use_cases.py
app/modules/google_places/: schemas.py  (+1 more)
supabase/: group_join_requests_setup.sql  groups_places_setup.sql  no_auth_migration.sql  place_photos_setup.sql  profile_setup.sql  schema.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260428210000_remote_schema_backfill.sql  20260429002500_fix_grupos_tipo_individual.sql  20260502120000_ai_guides.sql  20260502130000_ai_guides_v2.sql
tests/: test_api.py  test_groups_legacy_api.py  test_guias_api.py  test_ia_decisoes_api.py  test_ia_recomendacoes_api.py  test_integrations.py  test_no_auth_profiles_groups.py  test_profiles_api.py  test_supabase_client.py  test_today_recommendations_api.py
(+52 files in other folders)
